# TSPBrute

./: .gitignore  CMakeLists.txt  README.md  Wyniki.ods  main.cpp
cities/: own10.city  own4.city  own5.city  own6.city  own7.city  own8.city  own9.city
config/: CMakeVariables.hpp.in
include/: Algorithm.hpp  BranchAndBoundMTBruteForce.hpp  Map.hpp  OptimalMTBruteForce.hpp  StandardBruteForce.hpp
logs/: README.md
src/: BranchAndBoundMTBruteForce.cpp  Map.cpp  OptimalMTBruteForce.cpp  StandardBruteForce.cpp
